# RERASSOR-Simulation-Pixi

./: .gitignore  .gitmodules  README.md  colcon_defaults.yaml  flake.nix  pixi.toml
ros2_ws/: README.md
ros2_ws/src/arm_control/: CMakeLists.txt  package.xml
ros2_ws/src/arm_control/scripts/: arm_control_with_kdl.py
ros2_ws/src/aruco_recognition/: CMakeLists.txt  package.xml
ros2_ws/src/aruco_recognition/scripts/: aruco_pose_estimation.py
ros2_ws/src/final_description/: CMakeLists.txt  package.xml
ros2_ws/src/final_description/config/: final_description_controllers.yaml
ros2_ws/src/final_description/launch/: bringup.launch.py  camera_test.launch.py  spawn_model.launch.py
ros2_ws/src/final_description/meshes/: armone.stl  base_link.stl  baseonetop.stl  endcapbaseone.stl  endcapbasetwo.stl  endcaplinkone.stl  endcaplinktwo.stl  gearone.stl  gearthree.stl  manipulator.stl  motorendone.stl  motorendtwo.stl  motorthree.stl  pinbase.stl  pinend.stl  pinlinks.stl  planetaryconnector.stl  sunconnector.stl  wormone.stl  wormthree.stl
ros2_ws/src/final_description/models/aruco_block_long/: model.sdf
ros2_ws/src/final_description/models/aruco_block_long/meshes/: block_long.dae
ros2_ws/src/final_description/urdf/: README.md  camera_test.urdf  camera_test.xacro  final.gazebo  final.trans  final.xacro  final_include.xacro
ros2_ws/src/final_description_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/final_description_moveit_config/config/: final_description.ros2_control.xacro  final_description.srdf  final_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ros2_ws/src/final_description_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
