<?xml version="1.0"?>
<package format="3">
  <name>arm_control</name>
  <version>0.0.1</version>
  <description>Controls the arm</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>orocos_kdl</exec_depend> <!-- KDL dependency -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

