<?xml version="1.0"?>
<package format="3">
  <name>aruco_recognition</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for ArUco marker recognition</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend> <!-- If you are using OpenCV -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

